--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-compatible" content="ie-edge">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <link rel="stylesheet" href="fcc-tribute.css">
+  <link rel="stylesheet" href="fcc-tribute.css">
+  <script src="darkmode.js"></script>
 </head>
 
 
