Theme Change button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body id="main">
   <header> 
     <section id="title">
-      
+      <button onClick="darkMode"() class="darkmode-button">
+      Theme Change
+      </button>
       <h1> Alan Turing </h1>
       <h4 id="tribute-info">Shortened WWII by 2 Years, Saving 14+ Million Lives </h4>
       
