--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-compatible" content="ie-edge">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
   <link rel="stylesheet" href="fcc-tribute.css">
-  <script src="darkmode.js"></script>
+  <script src="https://raw.githubusercontent.com/Ultra24/fcc-tributepage/main/darkmode.js"></script>
 </head>
 
 
