adding JS to html file
It wouldn't link to the external JS file, so I added it to the html file.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <body id="main">
   <header> 
     <section id="title">
+      <script>
+// function for toggling dark mode on the website with the click of a button
+        function darkMode() {
+    var element = document.body;
+    element.classList.toggle("dark-mode"); }
+      </script>
       <button onClick="darkMode"() class="darkmode-button">
       Theme Change
       </button>
