--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>FCC Tribute</title>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-compatible" content="ie-edge">
+  <meta http-equiv="X-UA-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
   <link rel="stylesheet" href="fcc-tribute.css">
   <script src="darkmode.js"></script>
@@ -46,8 +46,10 @@ function darkMode() {
       <li><b>1939:</b> Joins the Government Codes and Ciphers and arrives at Bletchley Park one day after World War II was declared.</li>
 			
           </ul> 
+	      </article>	
     
          <footer>
+	   <hr></hr>
            <h5> If you'd like to learn more about Alan Turing and his Work feel free to check out his <a href="https://en.wikipedia.org/wiki/Alan_Turing" id="tribute-link" target="_blank">
             Wikipedia entry.</a></h5>
             </footer>
