Source Code button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body id="main">
   <header> 
     <section id="title">
+  <a href="https://github.com/Ultra24/fcc-tributepage" class="source-code">
+        <button class="code-button">Source Code</button>    
      <script>
 // function for toggling dark mode on the website with the click of a button
 function darkMode() {
