NoScript for theme change functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <button onclick="darkMode()" class="darkmode-button">
        Theme Change
       </button>
+     <br>
+      <br>
+    <noscript>To enable Theme Changing, please enable JavaScript.</noscript>
 
       <h1> Alan Turing </h1>
       <h4 id="tribute-info">Shortened WWII by 2 Years, Saving 14+ Million Lives </h4>
